--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<script src="jspsych/plugin-survey-text.js"></script>
 		<script src="jspsych/plugin-survey.js"></script>
 		<script src="jspsych/plugin-survey-html-form.js"></script>
+		<script src="jspsych/plugin-external-html.js"></script>
 		<link rel="stylesheet" href="jspsych/jspsych.css">
 		<link rel="stylesheet" href="jspsych/survey_style.css">
 	</head>
